syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "common.proto";

package net.proto;

option java_multiple_files = true;
option java_package = "dev.proto";

service CategoryGrpcService {

  rpc CreateCategory(CreateCategoryRequest) returns (CategoryProto) {
      option (google.api.http) = {
          post: "/api/v1/categories"
          body: "*"
      };
  }
  rpc UpdateCategory (UpdateCategoryRequest) returns (CategoryProto) {
      option (google.api.http) = {
          post: "/api/v1/categories/{categoryId}"
          body: "*"
      };
  }
  rpc DeleteCategory (DeleteCategoryRequest) returns (DeleteCategoryResponse) {
      option (google.api.http) = { delete: "/api/v1/categories/{categoryId}" };
  }
  rpc ListCategories (google.protobuf.Empty) returns (ListCategoriesResponse) {
      option (google.api.http) = { get: "/api/v1/categories" };
  }
  rpc ListCategoriesPaginated (PaginationRequest) returns (ListCategoriesResponse) {
      option (google.api.http) = { get: "/api/v1/categories" };
  }
  rpc GetCategory (GetCategoryRequest) returns (CategoryProto) {
      option (google.api.http) = { get: "/api/v1/categories/{categoryId}" };
  }
}

message CategoryProto {
  int64 categoryId = 1;
  string categoryName = 2;
}

message CreateCategoryRequest { 
  string categoryName = 1;
}

message UpdateCategoryRequest { 
  int64 categoryId = 1;
  string categoryName = 2;
}

message DeleteCategoryRequest {
  int64 categoryId = 1;
}

message DeleteCategoryResponse {
  bool success = 1;
}

message ListCategoriesResponse {
  repeated CategoryProto categories = 1;
}

message GetCategoryRequest {
  int64 categoryId = 1;
}
